UCF-APR2.4/ftr main/force-app/main/default/objects/Neustar_Data__c/Neustar_Data__c.object-meta.xml
<CustomObject>
    <description>Used to store the data received from Neustar</description>
    <label>Neustar Data</label>
    <nameField>
        <displayFormat>ND-{0000000}</displayFormat>
        <label>Neustar Data Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Neustar Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>