UCF-APR2.4/ftr main/force-app/main/default/objects/Neustar_Data__c/fields/Billing_Account__c.field-meta.xml
<CustomField>
    <fullName>Billing_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Neustar Data (Billing Account)</relationshipLabel>
    <relationshipName>Neustar_Data_Billing</relationshipName>
    <type>Lookup</type>
</CustomField>