UCF-APR2.4/ftr main/force-app/main/default/objects/Neustar_Data__c/fields/Billing_ID__c.field-meta.xml
<CustomField>
    <fullName>Billing_ID__c</fullName>
    <label>Billing ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>