UCF-APR2.4/ftr main/force-app/main/default/objects/Neustar_Data__c/fields/Current_SPID__c.field-meta.xml
<CustomField>
    <fullName>Current_SPID__c</fullName>
    <label>Current Service Provider ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>