UCF-APR2.4/ftr main/force-app/main/default/objects/Neustar_Data__c/fields/End_User_Location_Type__c.field-meta.xml
<CustomField>
    <fullName>End_User_Location_Type__c</fullName>
    <label>End User Location Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>