UCF-APR2.4/ftr main/force-app/main/default/objects/Neustar_Data__c/fields/LATA_Name__c.field-meta.xml
<CustomField>
    <fullName>LATA_Name__c</fullName>
    <label>LATA Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>