UCF-APR2.4/ftr main/force-app/main/default/objects/Neustar_Data__c/fields/Master_Account__c.field-meta.xml
<CustomField>
    <fullName>Master_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Neustar Data</relationshipLabel>
    <relationshipName>Neustar_Data</relationshipName>
    <type>Lookup</type>
</CustomField>