UCF-APR2.4/ftr main/force-app/main/default/objects/Neustar_Data__c/fields/Old_SP__c.field-meta.xml
<CustomField>
    <fullName>Old_SP__c</fullName>
    <label>Old Service Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>