UCF-APR2.4/ftr main/force-app/main/default/objects/Neustar_Data__c/fields/Old_SPID__c.field-meta.xml
<CustomField>
    <fullName>Old_SPID__c</fullName>
    <label>Old Service Provider ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>