UCF-APR2.4/ftr main/force-app/main/default/objects/Neustar_Data__c/fields/Port_Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Port_Activity_Type__c</fullName>
    <label>Port Activity Type</label>
    <length>200</length>
    <type>Text</type>
</CustomField>