UCF-APR2.4/ftr main/force-app/main/default/objects/Neustar_Data__c/fields/Port_Date__c.field-meta.xml
<CustomField>
    <fullName>Port_Date__c</fullName>
    <label>Port Date</label>
    <type>Date</type>
</CustomField>