UCF-APR2.4/ftr main/force-app/main/default/objects/Neustar_Data__c/fields/Port_Time__c.field-meta.xml
<CustomField>
    <fullName>Port_Time__c</fullName>
    <label>Port Time</label>
    <type>Time</type>
</CustomField>