UCF-APR2.4/ftr main/force-app/main/default/objects/Neustar_Data__c/fields/Service_Account__c.field-meta.xml
<CustomField>
    <fullName>Service_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Neustar Data (Service Account)</relationshipLabel>
    <relationshipName>Neustar_Data_Service</relationshipName>
    <type>Lookup</type>
</CustomField>