UCF-APR2.4/ftr main/force-app/main/default/objects/Neustar_Data__c/fields/TN__c.field-meta.xml
<CustomField>
    <fullName>TN__c</fullName>
    <label>TN</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>