UCF-APR2.4/ftr main/force-app/main/default/objects/Neustar_Data__c/fields/TN_LRN__c.field-meta.xml
<CustomField>
    <fullName>TN_LRN__c</fullName>
    <label>TN LRN</label>
    <type>Phone</type>
</CustomField>