UCF-APR2.4/ftr main/force-app/main/default/objects/Neustar_Data__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>TN__c</columns>
    <columns>Current_SP__c</columns>
    <columns>Port_Date__c</columns>
    <columns>Old_SP__c</columns>
    <columns>Master_Account__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>